--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://unpkg.com https://*.posthog.com https://*.i.posthog.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline'; connect-src 'self' ws://localhost:* ws://127.0.0.1:* http://localhost:* http://127.0.0.1:* https: https://unpkg.com https://21st.dev https://*.21st.dev https://*.posthog.com https://*.i.posthog.com https://cdn.jsdelivr.net sentry-ipc:; frame-src 'self' http://localhost:* http://127.0.0.1:* https://localhost:* https://127.0.0.1:* https:; child-src 'self' http://localhost:* http://127.0.0.1:* https:; img-src 'self' data: blob: https:; media-src 'self' blob:;" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' data: blob:; script-src 'self' 'unsafe-inline' 'wasm-unsafe-eval' https://unpkg.com https://*.posthog.com https://*.i.posthog.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline'; connect-src 'self' ws://localhost:* ws://127.0.0.1:* http://localhost:* http://127.0.0.1:* https: https://unpkg.com https://21st.dev https://*.21st.dev https://*.posthog.com https://*.i.posthog.com https://cdn.jsdelivr.net sentry-ipc:; frame-src 'self' http://localhost:* http://127.0.0.1:* https://localhost:* https://127.0.0.1:* https:; child-src 'self' http://localhost:* http://127.0.0.1:* https:; img-src 'self' data: blob: https:; media-src 'self' blob:;" />
     <title>1Code</title>
     <!-- Prevent theme flash: detect system/stored theme before render -->
     <script>
@@ -72,7 +72,6 @@
       </svg>
     </div>
     <script>
-      console.log("[HTML] Inline script running - scripts work!");
       function shouldIgnoreGlobalError(msg) {
         var text = String(msg || "").toLowerCase();
         return (
